--- a/index.html
+++ b/index.html
@@ -256,6 +256,8 @@
       </section>
       <!-- end service section. -->
       <!-- start portfolio section. -->
+      <!--
+         Todo:  AW9 HNA KYANIN WORKS !!!!!!!!!!!!!!!!!!!!!!
       <section id="portfolio" class="feature-area section-padding section">
          <div class="container">
             <div class="row">
@@ -325,6 +327,7 @@
             </div>
          </div>
       </section>
+      Todo:  AW9 HNA KYANIN WORKS !!!!!!!!!!!!!!!!!!!!!!
       <!-- end portfolio section. -->
       <!-- start resume section. -->
       <section id="resume" class="resume-area section-padding section">
