--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
                      </li>
                      <li><a href="#service">service</a>
                      </li>
-                     <li > <a href="#portfolio">portfolio</a>
-                     </li>
+                     
                      <li><a href="#resume">resume</a>
                      </li>
                      <li> <a href="#blog">blog</a>
@@ -104,8 +103,8 @@
                   <div class="slider-text"> <span class="intro">hello</span>
                      <h1>I’m <span>Saif eddine Matab</span> </h1>
                      <p>This is <span>Saif Matab,</span> Computer Science Student , aspiring ML Engineer, Web Developer located in France, looking for working around the globe.</p>
-                  </div> <a href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR47OOUGyJOWcwKn2fro4pDnqSa78yA1lOfXg" class="comman-btn download-btn">DOWNLOAD CV <img src="assets/img/brand-icons/hover-icon.png" alt="place img" class=""></a>
-               </div>
+                     </div> <a href="cv.pdf" class="comman-btn download-btn" download>DOWNLOAD CV <img src="assets/img/brand-icons/hover-icon.png" alt="place img" class=""></a>
+                  </div>
                </div>
             </div>
          </div>
