--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-   <title>Saif Matab</title>
+   <title>Saif eddine  Matab - Portfolio</title>
+   <meta name="description" content="Saif Matab Portfolio" />
+   <meta name="keywords" content="Saif Matab, Computer Science, ML Engineer, Web Developer, France , Saif eddine Matab , Matab , Saif eddine , Datascience " />
+   <meta name="author" content="Saif eddine Matab" />
    <link rel="apple-touch-icon" href="assets/img/favicon/apple-touch-icon.png">
    <link rel="icon" href="assets/img/favicon/favicon.ico">
    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,300i,400,400i,500,500i,600,600i,700" rel="stylesheet">
