Update resume link in index.html

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                         <ul class="list-inline">
                            <li><a href="#" class="comman-btn about-me-btn">hire me <img src="assets/img/brand-icons/hover-icon.png" alt="place img" class=""></a>
                            </li>
-                           <li><a href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR47OOUGyJOWcwKn2fro4pDnqSa78yA1lOfXg" class="comman-btn about-me-btn-2">RESUME <img src="assets/img/brand-icons/hover-icon.png" alt="place img" class=""></a>
+                           <li><a href="/cv.pdf" class="comman-btn about-me-btn-2">RESUME <img src="assets/img/brand-icons/hover-icon.png" alt="place img" class=""></a>
                            </li>
                         </ul>
                      </div>
