Add meta tags for social media sharing

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
    <meta name="description" content="Saif Matab Portfolio" />
    <meta name="keywords" content="Saif Matab, Computer Science, ML Engineer, Web Developer, France , Saif eddine Matab , Matab , Saif eddine , Datascience " />
    <meta name="author" content="Saif eddine Matab" />
+   <meta property="og:title" content="Saif Matab">
+   <meta property="og:description" content="Saif Matab Portfolio">
+   <meta name="twitter:card" content="summary_large_image">
+   <meta name="twitter:title" content="Saif Matab">
+   <meta name="twitter:description" content="Saif Matab Portfolio">
    <link rel="apple-touch-icon" href="assets/img/favicon/apple-touch-icon.png">
    <link rel="icon" href="assets/img/favicon/favicon.ico">
    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,300i,400,400i,500,500i,600,600i,700" rel="stylesheet">
