Update twitter link

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                   </li>
                   <li><a href="https://www.linkedin.com/in/saif-matab/"><span class="ti-linkedin"></span></a>
                   </li>
-                  <li><a href="https://twitter.com/kernelrb"><span class="ti-twitter"></span></a>
+                  <li><a href="https://twitter.com/0xkernel_rs"><span class="ti-twitter"></span></a>
                   </li>
                   <li><a href="https://www.youtube.com/@kernelrb"><span class="ti-youtube"></span></a>
                   </li>
